force-app/main/default/objects/Notification_Redirect__c/Notification_Redirect__c.object-meta.xml
<CustomObject>
    <label>Notification Redirect</label>
    <nameField>
        <displayFormat>NR-{00000000}</displayFormat>
        <label>Notification Redirect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications Redirect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>