force-app/main/default/objects/Notification_Redirect__c/fields/Delete_date__c.field-meta.xml
<CustomField>
    <fullName>Delete_date__c</fullName>
    <formula>CreatedDate + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete date</label>
    <type>DateTime</type>
</CustomField>