force-app/main/default/objects/Notification_Redirect__c/fields/Target_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>