force-app/main/default/objects/Notification_Redirect__c/fields/URLParams__c.field-meta.xml
<CustomField>
    <fullName>URLParams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URLParams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>